# Ledger

./: .gitignore  CHANGELOG.md  CLAUDE.md  DevLaunch.sh  Install.sh  README.md  Release.sh  bump-version.sh  index.html  install-latest.sh  package-lock.json  package.json  setup-autoupdate-sudoers.sh  tag-release.sh  vite.config.js
.github/workflows/: release.yml
docs/: mobile-plan.md
src/: App.jsx  main.jsx  styles.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_auto_add_and_debt_payments.sql  0003_debt_payment_applied.sql  0004_debt_history_payment_link.sql  0005_category_budgets.sql  0006_bill_dual_slot.sql  0007_transfers.sql  0008_transfer_goal_endpoints.sql  0009_account_exclude_from_total.sql  0010_card_budgets.sql  0011_generic_seed_names.sql  0012_sort_order.sql  0013_updated_at.sql  0014_goal_contribution_kind.sql  0015_debt_spendable.sql  0016_debt_charges.sql  0017_bill_due_day2.sql
src-tauri/src/: backup.rs  main.rs  updater.rs
src/components/: AccountsTab.jsx  BillsTab.jsx  CardTab.jsx  DebtSpendingTab.jsx  DebtsTab.jsx  GoalsTab.jsx  InsightsTab.jsx  MonthsTab.jsx  SettingsTab.jsx  Shared.jsx  Toast.jsx  TourOverlay.jsx
src/lib/: backup.js  calc.js  calc.test.js  db.js  db.test.js  demo.js  profiles.js  testdb.js  undo.js  update.js  update.test.js
