[package]
name = "ledger-desktop"
version = "0.1.0"
description = "Household Ledger — local-first desktop budgeting app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "ledger-desktop"
path = "src/main.rs"
