[package]
name = "ledger-desktop"
version = "0.16.0"
description = "Household Ledger — local-first desktop budgeting app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[[bin]]
name = "ledger-desktop"
path = "src/main.rs"
